Fix some reviews being hidden on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -276,4 +276,12 @@ a:hover::before {
   .nav {
     flex-direction: column;
   }
+
+  .review-content {
+    height: 100vh;
+  }
+
+  .review-wrapper-wrapper {
+    flex-direction: column;
+  }
 }
